--- a/prepare/systemd/vault.service
+++ b/prepare/systemd/vault.service
@@ -3,12 +3,14 @@ Description=Hashicorp Vault
 Requires=network-online.target
 After=network-online.target
 ConditionFileNotEmpty=/etc/vault.d/vault.hcl
+StartLimitIntervalSec=60
+StartLimitBurst=3
 
 [Service]
 Restart=on-failure
-EnvironmentFile=/etc/vault.d/vault.conf
-Environment=GOMAXPROCS=nproc
-ExecStart=/usr/local/bin/vault server -config="/etc/vault.d/vault.hcl"
+EnvironmentFile=/etc/vault.d/vault.env
+NoNewPrivileges=yes
+ExecStart=/usr/bin/vault server -config="/etc/vault.d/vault.hcl"
 ExecReload=/bin/kill -HUP $MAINPID
 KillSignal=SIGTERM
 User=vault
